ligolang/src/test/contracts/negative/modules_export_const.jsligo
namespace Bar {
    let foo = 2
}

let a = Bar.foo;